# CSE

./: .gitignore  .gitmodules  FortranMmTest.m  README.md  worksheet4.m
HiWi/: plot_from_csv.m
MLCV/: .gitignore  mnist.py  template.tex
cv3d_seminar/: .presentation_notes.txt.swp  macro.tex  meanfield.m  notes.txt  paper.tex  presentation.pdfpc  presentation.tex  presentation_notes.txt  related_work.txt  seminar.kilepr  template.tex
git_tutorial/: git.odp
neural_networks_presentation/: notes.txt
numerical_programming/: Exercise3b.m  FT_bf.m  SD_CG.m  c11_fl_nums_visualisation.m  c21_algebraic_interpolation.m  diverging_fibo.m  lecture4.m  linear_systems.m  numerics1.m  test1.m  tutorial2.m  tutorial2_ex1.m  tutorial2_ex2.m  tutorial3_ex1.m  tutorial4_ex1.m  tutorial4_ex2.m  tutorial5_ex1.m  tutorial5_ex3.m  tutorial6_ex1.m  tutorial8.m  tutorial8_ex1.m  worksheet9.m
parallel_numerics/src/: CMakeLists.txt  src.kdev4
parallel_numerics/src/.kdev4/: src.kdev4
parallel_numerics/src/src/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  tutorial3_ex5.cpp  tutorial4_ex4.cpp  tutorial4_ex5.cpp
parallel_numerics/src/test/: CMakeLists.txt  test.cpp
parallel_numerics/src/test/gtest/: CMakeLists.txt  gtest_main.cc
parallel_programming/: .gitignore  nested_reduction.cpp
sci_comp_ii/: ex1.m  ex2.m  ex2_gaussSeidel.m  ex2_interpolate.m  ex2_interpolate_semi.m  ex2_residual.m  ex2_restrict_fullweighting.m  ex2_restrict_injection.m  ex2_restrict_semi.m  ex2_vCycle.m  ex4.m  ex4_computeCoarseGridStencil.m  ex4_interpolate.m  ex4_residual.m  ex4_restrict.m  (+3 more)
(+205 files in other folders)
